--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                             </ul>
                                             <div class="welcome-one__person">
                                                 <div class="welcome-one__person-img">
-                                                    <img src="assets/images/resources/welcome-one-person-img.jpg"
+                                                    <img src="assets/images/resources/welcome-one-person-img.png"
                                                         alt="">
                                                 </div>
                                                 <div class="welcome-one__person-sign">
@@ -744,7 +744,7 @@
                         <div class="why-choose-one__right">
                             <div class="section-title text-left">
                                 <span class="section-title__tagline">why choose us</span>
-                                <h2 class="section-title__title">We do more then ever platform</h2>
+                                <h2 class="section-title__title">One millon uzbek coders</h2>
                             </div>
                             <p class="why-choose-one__right-text">There are many variations of passages of lorem ipsum
                                 available, but the majority have suffered in some form, by injected free text not
@@ -814,7 +814,7 @@
             <div class="container">
                 <div class="section-title text-center">
                     <span class="section-title__tagline">our customer feedbacks</span>
-                    <h2 class="section-title__title">What they’re saying</h2>
+                    <h2 class="section-title__title">Mijozlar fikri</h2>
                 </div>
                 <div class="row">
                     <div class="col-xl-12">
