about services edited

--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
                                     <span class="blog-one__plus"></span>
                                 </a>
                                 <div class="blog-one__date">
-                                    <p>26 aug</p>
+                                    <p>28 now</p>
                                 </div>
                             </div>
                             <div class="blog-content">
@@ -1014,7 +1014,7 @@
                                     </li>
                                 </ul>
                                 <h3 class="blog-one__title">
-                                    <a href="blog-details.html">How much does a website cost to build</a>
+                                    <a href="blog-details.html">Biz farzandingizdan bo‘lajak liderlarni yaratamiz!</a>
                                 </h3>
                                 <div class="blog-one__read-btn">
                                     <a href="blog-details.html">Read More</a>
@@ -1031,7 +1031,7 @@
                                     <span class="blog-one__plus"></span>
                                 </a>
                                 <div class="blog-one__date">
-                                    <p>26 aug</p>
+                                    <p>28 now</p>
                                 </div>
                             </div>
                             <div class="blog-content">
@@ -1042,7 +1042,7 @@
                                     </li>
                                 </ul>
                                 <h3 class="blog-one__title">
-                                    <a href="blog-details.html">Uniquely enable accurate supply chains</a>
+                                    <a href="blog-details.html">Welcome to our BPO school</a>
                                 </h3>
                                 <div class="blog-one__read-btn">
                                     <a href="blog-details.html">Read More</a>
@@ -1059,7 +1059,7 @@
                                     <span class="blog-one__plus"></span>
                                 </a>
                                 <div class="blog-one__date">
-                                    <p>26 aug</p>
+                                    <p>28 now</p>
                                 </div>
                             </div>
                             <div class="blog-content">
@@ -1070,7 +1070,7 @@
                                     </li>
                                 </ul>
                                 <h3 class="blog-one__title">
-                                    <a href="blog-details.html">task researched data enterprise process</a>
+                                    <a href="blog-details.html">😎 YANGI YILNI YANGI MAQSAD BILAN   BOSHLANG!</a>
                                 </h3>
                                 <div class="blog-one__read-btn">
                                     <a href="blog-details.html">Read More</a>
@@ -1202,7 +1202,7 @@
 
             <div class="logo-box">
                 <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="155"
-                        alt="" /></a>
+                        alt="logo" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
