--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About || Mibooz || Mibooz HTML Template For Business</title>
+    <title>About || BPO_Shool</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -55,7 +55,7 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu-wrapper">
                     <div class="main-menu-wrapper__logo">
-                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt="logo" width="79"></a>
                     </div>
                     <div class="main-menu-wrapper__main-menu">
                         <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
@@ -226,34 +226,34 @@
                 }}'>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-1.png" alt="">
+                            <img src="assets/images/brand/brand-1-1.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-2.png" alt="">
+                            <img src="assets/images/brand/brand-1-2.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-3.png" alt="">
+                            <img src="assets/images/brand/brand-1-3.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-4.png" alt="">
+                            <img src="assets/images/brand/brand-1-4.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-5.png" alt="">
+                            <img src="assets/images/brand/brand-1-5.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-1.png" alt="">
+                            <img src="assets/images/brand/brand-1-1.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-2.png" alt="">
+                            <img src="assets/images/brand/brand-1-2.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-3.png" alt="">
+                            <img src="assets/images/brand/brand-1-3.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-4.png" alt="">
+                            <img src="assets/images/brand/brand-1-4.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-5.png" alt="">
+                            <img src="assets/images/brand/brand-1-5.png" alt="brand" height="100">
                         </div><!-- /.swiper-slide -->
                     </div>
                 </div>
