--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services || Mibooz || Mibooz HTML Template For Business</title>
+    <title>Services || BPO_Shool uz</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -55,7 +55,7 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu-wrapper">
                     <div class="main-menu-wrapper__logo">
-                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt="" width="79" height="79"></a>
                     </div>
                     <div class="main-menu-wrapper__main-menu">
                         <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
@@ -124,7 +124,7 @@
                             </div>
                             <div class="main-menu-wrapper__call-number">
                                 <p>Call Anytime</p>
-                                <h5><a href="tel:926668880000">+ 92 666 888 0000</a></h5>
+                                <h5><a href="tel:926668880000">+998 99 063 11 99</a></h5>
                             </div>
                         </div>
                         <div class="main-menu-wrapper__search-box">
@@ -602,8 +602,8 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="155"
-                        alt="" /></a>
+                <a href="index.html" aria-label="logo image">
+                    <img src="assets/images/resources/logo-1.png" width="79" height="79"alt="logo" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
