--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Team || Mibooz || Mibooz HTML Template For Business</title>
+    <title>Team || BPO_Shool uz</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -55,7 +55,9 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu-wrapper">
                     <div class="main-menu-wrapper__logo">
-                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                        <a href="index.html">
+                            <img src="assets/images/resources/logo-1.png" alt="logo" width="79" height="79">
+                        </a>
                     </div>
                     <div class="main-menu-wrapper__main-menu">
                         <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
@@ -124,7 +126,7 @@
                             </div>
                             <div class="main-menu-wrapper__call-number">
                                 <p>Call Anytime</p>
-                                <h5><a href="tel:926668880000">+ 92 666 888 0000</a></h5>
+                                <h5><a href="tel:926668880000">+ 998 99 063 11 99</a></h5>
                             </div>
                         </div>
                         <div class="main-menu-wrapper__search-box">
