--- a/services.html
+++ b/services.html
@@ -314,6 +314,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="400ms">
+                            
                             <!--Services One Single-->
                             <div class="services-one__single">
                                 <h3 class="services-one__title"><a href="website-development.html">Website <br>
@@ -366,7 +367,7 @@
                     <div class="design-studio__inner">
                         <h2 class="design-studio__title">Design <span>Studio</span> that gets <br> excited about</h2>
                         <div class="design-studio__video-link">
-                            <a href="https://www.youtube.com/watch?v=Get7rqXYrbQ" class="video-popup">
+                            <a href="https://www.youtube.com/watch?v=YUNxfljvXo4" class="video-popup">
                                 <div class="design-studio__video-icon">
                                     <span class="icon-play-button"></span>
                                     <i class="ripple"></i>
@@ -457,34 +458,34 @@
                 }}'>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-1.png" alt="">
+                            <img src="assets/images/brand/brand-1-1.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-2.png" alt="">
+                            <img src="assets/images/brand/brand-1-2.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-3.png" alt="">
+                            <img src="assets/images/brand/brand-1-3.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-4.png" alt="">
+                            <img src="assets/images/brand/brand-1-4.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-5.png" alt="">
+                            <img src="assets/images/brand/brand-1-5.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-1.png" alt="">
+                            <img src="assets/images/brand/brand-1-1.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-2.png" alt="">
+                            <img src="assets/images/brand/brand-1-2.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-3.png" alt="">
+                            <img src="assets/images/brand/brand-1-3.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-4.png" alt="">
+                            <img src="assets/images/brand/brand-1-4.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
-                            <img src="assets/images/brand/brand-1-5.png" alt="">
+                            <img src="assets/images/brand/brand-1-5.png" alt=""  height="100" >
                         </div><!-- /.swiper-slide -->
                     </div>
                 </div>
@@ -501,7 +502,7 @@
                     <div class="site-footer__top-inner">
                         <div class="site-footer__top-left">
                             <h3 class="site-footer__top-left-title">Your Perfect Business Partner Solution</h3>
-                            <a href="tel:926668880000" class="site-footer__top-left-phone">+ 92 666 888 0000</a>
+                            <a href="tel:site-footer__top-left-phone" class="site-footer__top-left-phone">+ 998 99 063 11 99</a>
                         </div>
                         <div class="site-footer__top-right">
                             <div class="site-footer__top-right-social">
@@ -521,13 +522,13 @@
                             <div class="col-xl-3 col-lg-4 wow fadeInUp" data-wow-delay="100ms">
                                 <div class="footer-widget__column footer-widget__contact">
                                     <h3 class="footer-widget__title">Contact</h3>
-                                    <p class="footer-widget__contact-text">86 Road Broklyn Street, 600 <br> New York,
-                                        USA</p>
+                                    <p class="footer-widget__contact-text">Yoshlar bog`i <br>
+                                        Troisky  Chirchiq, <br>
+                                            Toshkent</p>
                                     <h4 class="footer-widget__contact-email-phone">
                                         <a href="mailto:needhelp@company.com"
-                                            class="footer-widget__contact-email">needhelp@company.com</a>
-                                        <a href="tel:926668880000" class="footer-widget__contact-phone">+ 92 666 888
-                                            0000</a>
+                                            class="footer-widget__contact-email">lochinbeksetor@gmail.com</a>
+                                        <a href="tel:926668880000" class="footer-widget__contact-phone">+ +998 99 063 11 99</a>
                                     </h4>
                                 </div>
                             </div>
