--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                             </div>
                             <div class="main-menu-wrapper__call-number">
                                 <p>Call Anytime</p>
-                                <h5><a href="tel:926668880000">+ 92 666 888 0000</a></h5>
+                                <h5><a href="tel:+998990631199">+998 99 063 11 99</a></h5>
                             </div>
                         </div>
                         <div class="main-menu-wrapper__search-box">
@@ -559,7 +559,7 @@
                     <div class="site-footer__top-inner">
                         <div class="site-footer__top-left">
                             <h3 class="site-footer__top-left-title">Your Perfect Business Partner Solution</h3>
-                            <a href="tel:926668880000" class="site-footer__top-left-phone">+ 92 666 888 0000</a>
+                            <a href="tel:926668880000" class="site-footer__top-left-phone">+998990631199</a>
                         </div>
                         <div class="site-footer__top-right">
                             <div class="site-footer__top-right-social">
@@ -579,13 +579,12 @@
                             <div class="col-xl-3 col-lg-4 wow fadeInUp" data-wow-delay="100ms">
                                 <div class="footer-widget__column footer-widget__contact">
                                     <h3 class="footer-widget__title">Contact</h3>
-                                    <p class="footer-widget__contact-text">86 Road Broklyn Street, 600 <br> New York,
-                                        USA</p>
+                                    <p class="footer-widget__contact-text">Yoshlar bog`i  <br> Troisky Chirchiq, <br>
+                                        Toshkent</p>
                                     <h4 class="footer-widget__contact-email-phone">
-                                        <a href="mailto:needhelp@company.com"
-                                            class="footer-widget__contact-email">needhelp@company.com</a>
-                                        <a href="tel:926668880000" class="footer-widget__contact-phone">+ 92 666 888
-                                            0000</a>
+                                        <a href="mailto:lochinbeksetor@gmail.com"
+                                            class="footer-widget__contact-email">lochinbeksetor@gmail.com</a>
+                                        <a href="tel:+998990631199" class="footer-widget__contact-phone">++998 99 063 11 99</a>
                                     </h4>
                                 </div>
                             </div>
