--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <li class="dropdown">
                                 <a href="#">Pages</a>
                                 <ul>
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="about.html" target="_blank">About</a></li>
                                     <li><a href="team.html">Team</a></li>
                                     <li><a href="faq.html">FAQs</a></li>
                                     <li><a href="404.html">404 Error</a></li>
@@ -1100,7 +1100,7 @@
                     <div class="site-footer__top-inner">
                         <div class="site-footer__top-left">
                             <h3 class="site-footer__top-left-title">Your Perfect Business Partner Solution</h3>
-                            <a href="tel:926668880000" class="site-footer__top-left-phone">+998990631199</a>
+                            <a href="tel:+998990631199" class="site-footer__top-left-phone">+998990631199</a>
                         </div>
                         <div class="site-footer__top-right">
                             <div class="site-footer__top-right-social">
@@ -1126,7 +1126,7 @@
                                     <h4 class="footer-widget__contact-email-phone">
                                         <a href="mailto:lochinbeksetor@gmail.com"
                                             class="footer-widget__contact-email">lochinbeksetor@gmail.com</a>
-                                        <a href="tel:+998990631199" class="footer-widget__contact-phone">+998990631199 </a>
+                                        <a href="tel:+998990631199" class="footer-widget__contact-phone">+998 99 063 11 99 </a>
                                     </h4>
                                 </div>
                             </div>
