--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Mibooz HTML Template For Business" />
+    <meta name="description" content="Bpo school uz" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,8 +41,8 @@
     <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/mibooz.css" />
-    <link rel="stylesheet" href="assets/css/mibooz-responsive.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-responsive.css" />
 </head>
 
 <body>
@@ -55,7 +55,9 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu-wrapper">
                     <div class="main-menu-wrapper__logo">
-                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt="logo" width="79"></a>
+                        <a href="index.html">
+                            <img src="assets/images/resources/logo-1.png" alt="logo" width="79">
+                        </a>
                     </div>
                     <div class="main-menu-wrapper__main-menu">
                         <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
@@ -79,39 +81,23 @@
                                 </ul>
                             </li>
                             <li class="dropdown  ">
-                                <a href="#">Pages</a>
+                                <a href="team.html">Team</a>
                                 <ul>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="team.html">Team</a></li>
-                                    <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
+                                    <li>
+                                        <a href="about.html">About</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="services.html">Services</a>
-                                <ul>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="mobile-application.html">Mobile Application</a></li>
-                                    <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                                    <li><a href="graphic-designing.html">Graphic Designing</a></li>
-                                    <li><a href="website-development.html">Website Development</a></li>
-                                    <li><a href="social-marketing.html">Social Marketing</a></li>
-                                    <li><a href="content-writing.html">Content Writting</a></li>
-                                </ul>
                             </li>
+                           
                             <li class="dropdown">
-                                <a href="#">Projects</a>
+                                <a href="./blog.html">Blog</a>
                                 <ul>
-                                    <li><a href="project.html">Projects</a></li>
-                                    <li><a href="project-details.html">Project Details</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">Blog</a>
-                                <ul>
-                                    <li><a href="blog.html">Blog Posts</a></li>
-                                    <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
+                                    <li>
+                                        <a href="blog.html">Blog Posts</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li><a href="contact.html">Contact</a></li>
@@ -286,100 +272,6 @@
             </div>
         </section>
         <!--Design Studio End-->
-
-        <!--Testimonial Two Start-->
-        <section class="testimonial-two about-page-testimonial-two">
-            <div class="testimonial-two-shape wow slideInRight" data-wow-delay="100ms" data-wow-duration="2500ms"><img
-                    src="assets/images/shapes/testimonial-two-shape.png" alt=""></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-6">
-                        <div class="testimonial-two__left wow slideInLeft" data-wow-delay="100ms"
-                            data-wow-duration="2500ms">
-                            <div class="testimonial-two__img">
-                                <img src="assets/images/testimonial/testimonial-two-img.jpg" alt="">
-                                <div class="testimonial-two__content">
-                                    <h3 class="testimonial-two__title">#Happy <span>Customers</span></h3>
-                                </div>
-                                <div class="testimonial-two__box-1"></div>
-                                <div class="testimonial-two__box-2"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-6">
-                        <div class="testimonial-two__right">
-                            <div class="section-title text-left">
-                                <span class="section-title__tagline">our customer feedbacks</span>
-                                <h2 class="section-title__title">What they’re saying</h2>
-                            </div>
-                            <div class="testimonial-two__carousel owl-theme owl-carousel">
-                                <!--Testimonial Two Single-->
-                                <div class="testimonial-two__single">
-                                    <p class="testimonial-two__text">This is due to their excellent service, competitive
-                                        pricing and customer support. It’s throughly refresing to get such a personal
-                                        touch. Duis aute lorem ipsum is simply free text irure dolor in reprehen.</p>
-                                    <div class="testimonial-two__client-info">
-                                        <div class="testimonial-two__client-img">
-                                            <img src="assets/images/testimonial/testimonial-one-img-2.jpg" alt="">
-                                        </div>
-                                        <div class="testimonial-two__client-details">
-                                            <h4 class="testimonial-two__client-name">kevin martin</h4>
-                                            <p class="testimonial-two__client-title">Customer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--Testimonial Two Single-->
-                                <div class="testimonial-two__single">
-                                    <p class="testimonial-two__text">This is due to their excellent service, competitive
-                                        pricing and customer support. It’s throughly refresing to get such a personal
-                                        touch. Duis aute lorem ipsum is simply free text irure dolor in reprehen.</p>
-                                    <div class="testimonial-two__client-info">
-                                        <div class="testimonial-two__client-img">
-                                            <img src="assets/images/testimonial/testimonial-one-img-1.jpg" alt="">
-                                        </div>
-                                        <div class="testimonial-two__client-details">
-                                            <h4 class="testimonial-two__client-name">Jessica Brown</h4>
-                                            <p class="testimonial-two__client-title">Customer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--Testimonial Two Single-->
-                                <div class="testimonial-two__single">
-                                    <p class="testimonial-two__text">This is due to their excellent service, competitive
-                                        pricing and customer support. It’s throughly refresing to get such a personal
-                                        touch. Duis aute lorem ipsum is simply free text irure dolor in reprehen.</p>
-                                    <div class="testimonial-two__client-info">
-                                        <div class="testimonial-two__client-img">
-                                            <img src="assets/images/testimonial/testimonial-one-img-3.jpg" alt="">
-                                        </div>
-                                        <div class="testimonial-two__client-details">
-                                            <h4 class="testimonial-two__client-name">sarah rose</h4>
-                                            <p class="testimonial-two__client-title">Customer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--Testimonial Two Single-->
-                                <div class="testimonial-two__single">
-                                    <p class="testimonial-two__text">This is due to their excellent service, competitive
-                                        pricing and customer support. It’s throughly refresing to get such a personal
-                                        touch. Duis aute lorem ipsum is simply free text irure dolor in reprehen.</p>
-                                    <div class="testimonial-two__client-info">
-                                        <div class="testimonial-two__client-img">
-                                            <img src="assets/images/testimonial/testimonial-one-img-2.jpg" alt="">
-                                        </div>
-                                        <div class="testimonial-two__client-details">
-                                            <h4 class="testimonial-two__client-name">kevin martin</h4>
-                                            <p class="testimonial-two__client-title">Customer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--Testimonial Two End-->
 
         <!--Team One Start-->
         <section class="team-one">
@@ -637,8 +529,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyrights, <span class="dynamic-year"></span> <a
-                                        href="#">Layerdrops.com</a>
+                                <p class="site-footer__bottom-text">© Copyrights, <span class="dynamic-year"></span> <a href="#">Layerdrops.com</a>
                                 </p>
                             </div>
                         </div>
@@ -656,11 +547,14 @@
         <div class="mobile-nav__overlay mobile-nav__toggler"></div>
         <!-- /.mobile-nav__overlay -->
         <div class="mobile-nav__content">
-            <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
+            <span class="mobile-nav__close mobile-nav__toggler">
+                <i class="fa fa-times"></i>
+            </span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="155"
-                        alt="" /></a>
+                <a href="index.html" aria-label="logo image">
+                    <img src="assets/images/resources/logo-1.png" width="155" alt=""/>
+                </a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
@@ -669,11 +563,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@mibooz.com</a>
+                    <a href="mailto:lochinbeksetor@gmail.com.com">lochinbeksetorgmail.com.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+998990631199">+998 99 063 11 99</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
