--- a/blog.html
+++ b/blog.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog || Mibooz || Mibooz HTML Template For Business</title>
+    <title>Blog || BPO school uz</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Mibooz HTML Template For Business" />
+    <meta name="description" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,8 +41,8 @@
     <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/mibooz.css" />
-    <link rel="stylesheet" href="assets/css/mibooz-responsive.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-responsive.css" />
 </head>
 
 <body>
@@ -55,36 +55,24 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu-wrapper">
                     <div class="main-menu-wrapper__logo">
-                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                        <a href="index.html">
+                            <img src="assets/images/resources/logo-1.png" alt="" width="79" height="79">
+                        </a>
                     </div>
                     <div class="main-menu-wrapper__main-menu">
-                        <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
+                        <a href="#" class="mobile-nav__toggler">
+                            <i class="fa fa-bars"></i>
+                        </a>
                         <ul class="main-menu__list">
                             <li class="dropdown">
                                 <a href="index.html">Home</a>
-                                <ul>
-                                    <li>
-                                        <a href="index.html">Home One</a>
-                                    </li>
-                                    <li><a href="index2.html">Home Two</a></li>
-                                    <li><a href="index3.html">Home Three</a></li>
-                                    <li class="dropdown">
-                                        <a href="#">Header Styles</a>
-                                        <ul>
-                                            <li><a href="index.html">Header One</a></li>
-                                            <li><a href="index2.html">Header Two</a></li>
-                                            <li><a href="index3.html">Header Two</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                               
                             </li>
                             <li class="dropdown">
-                                <a href="#">Pages</a>
+                                <a href="about.html">About</a>
                                 <ul>
-                                    <li><a href="about.html">About</a></li>
+                                    <li></li>
                                     <li><a href="team.html">Team</a></li>
-                                    <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -107,11 +95,9 @@
                                 </ul>
                             </li>
                             <li class="dropdown  ">
-                                <a href="#">Blog</a>
+                                <a href="./blog.html">Blog</a>
                                 <ul>
                                     <li><a href="blog.html">Blog Posts</a></li>
-                                    <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
                             <li><a href="contact.html">Contact</a></li>
@@ -124,7 +110,7 @@
                             </div>
                             <div class="main-menu-wrapper__call-number">
                                 <p>Call Anytime</p>
-                                <h5><a href="tel:926668880000">+ 92 666 888 0000</a></h5>
+                                <h5><a href="tel:+998990631199">+998 99 063 11 99</a></h5>
                             </div>
                         </div>
                         <div class="main-menu-wrapper__search-box">
@@ -425,7 +411,7 @@
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
                                 <p class="site-footer__bottom-text">© Copyrights, <span class="dynamic-year"></span> <a
-                                        href="#">Layerdrops.com</a>
+                                        href="#">lochinbeksetor.com</a>
                                 </p>
                             </div>
                         </div>
@@ -456,11 +442,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@mibooz.com</a>
+                    <a href="mailto:lochinbeksetor@gmail.com">nlochinbeksetor@gmail.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+998990631199">+998 99 063 11 99</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
@@ -495,7 +481,8 @@
     </div>
     <!-- /.search-popup -->
 
-    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
+    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i>
+    </a>
 
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
