--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bpo school uz ||     CONTACT</title>
+    <title>Bpo school uz    ||     CONTACT</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -41,8 +40,8 @@
     <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/mibooz.css" />
-    <link rel="stylesheet" href="assets/css/mibooz-responsive.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-responsive.css" />
 </head>
 
 <body>
@@ -79,12 +78,10 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#">Pages</a>
+                                <a href="about.html">About</a>
+                                
                                 <ul>
-                                    <li><a href="about.html">About</a></li>
                                     <li><a href="team.html">Team</a></li>
-                                    <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -179,7 +176,7 @@
                         <div class="location__single location__single-last">
                             <h3 class="location__title">contact</h3>
                             <h5 class="location__phone-email">
-                                <a href="tel:926668880000" class="location__phone">+ 92 666 888 0000</a>
+                                <a href="tel:926668880000" class="location__phone">+998 99 063 11  99</a>
                                 <a href="mailto:needhelp@company.com" class="location__email">needhelp@company.com</a>
                             </h5>
                             <div class="location__social">
