--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Mibooz HTML Template For Business" />
+    <meta name="description"/>
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Federo&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/vendors/animate/animate.min.css" />
@@ -40,14 +38,14 @@
     <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/mibooz.css" />
-    <link rel="stylesheet" href="assets/css/mibooz-responsive.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-responsive.css" />
 </head>
 
 <body>
-    <!-- <div class="preloader">
+    <div class="preloader">
         <img class="preloader__image" width="60" src="assets/images/loader.png" alt="" />
-    </div> -->
+    </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
         <header class="main-header clearfix">
@@ -58,60 +56,31 @@
                             <img src="assets/images/resources/logo-1.png" alt="" width="79" height="79"></a>
                     </div>
                     <div class="main-menu-wrapper__main-menu">
-                        <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
+                        <a href="#" class="mobile-nav__toggler">
+                            <i class="fa fa-bars"></i>
+                        </a>
                         <ul class="main-menu__list">
-                            <li class="dropdown  ">
+                            <li class="dropdown">
                                 <a href="index.html">Home</a>
-                                <ul>
-                                    <li>
-                                        <a href="index.html">Home One</a>
-                                    </li>
-                                    <li><a href="index2.html">Home Two</a></li>
-                                    <li><a href="index3.html">Home Three</a></li>
-                                    <li class="dropdown">
-                                        <a href="#">Header Styles</a>
-                                        <ul>
-                                            <li><a href="index.html">Header One</a></li>
-                                            <li><a href="index2.html">Header Two</a></li>
-                                            <li><a href="index3.html">Header Two</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#">Pages</a>
+                                <a href="about.html" target="_blank">About</a>
                                 <ul>
-                                    <li><a href="about.html" target="_blank">About</a></li>
                                     <li><a href="team.html">Team</a></li>
-                                    <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="services.html">Services</a>
                                 <ul>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="mobile-application.html">Mobile Application</a></li>
-                                    <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                                    <li><a href="graphic-designing.html">Graphic Designing</a></li>
-                                    <li><a href="website-development.html">Website Development</a></li>
-                                    <li><a href="social-marketing.html">Social Marketing</a></li>
-                                    <li><a href="content-writing.html">Content Writting</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">Projects</a>
-                                <ul>
-                                    <li><a href="project.html">Projects</a></li>
-                                    <li><a href="project-details.html">Project Details</a></li>
+                                    <li>
+                                        <a href="services.html">Services</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#">Blog</a>
                                 <ul>
                                     <li><a href="blog.html">Blog Posts</a></li>
-                                    <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
                             <li><a href="contact.html">Contact</a></li>
@@ -136,8 +105,10 @@
         </header>
 
         <div class="stricky-header stricked-menu main-menu">
-            <div class="sticky-header__content"></div><!-- /.sticky-header__content -->
-        </div><!-- /.stricky-header -->
+            <div class="sticky-header__content"></div>
+        </div>
+
+        <!-- /.stricky-header -->
 
         <!--Main Slider Start-->
         <section class="main-slider">
@@ -806,71 +777,7 @@
             </div>
         </section>
         <!--Why Choose One End-->
-
-        <!--Testimonial One Start-->
-        <section class="testimonial-one">
-            <div class="testimonial-one__map"
-                style="background-image: url(assets/images/shapes/testimonial-one-map.png)"></div>
-            <div class="container">
-                <div class="section-title text-center">
-                    <span class="section-title__tagline">our customer feedbacks</span>
-                    <h2 class="section-title__title">Mijozlar fikri</h2>
-                </div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="testimonial-one__carousel owl-theme owl-carousel">
-                            <!--Testimonial One Single-->
-                            <div class="testimonial-one__single">
-                                <div class="testimonial-one__content">
-                                    <p class="testimonial-one__text">I was very impresed by the mibooz service and their
-                                        work of quality lorem ipsum is simply free text used by copy typing refreshing.
-                                        Neque porro est qui ipsum.</p>
-                                </div>
-                                <div class="testimonial-one__client-info">
-                                    <div class="testimonial-one__client__img">
-                                        <img src="assets/images/testimonial/testimonial-one-img-1.jpg" alt="">
-                                    </div>
-                                    <h4 class="testimonial-one__name">Jessica Brown</h4>
-                                    <p class="testimonial-one__title">Customer</p>
-                                </div>
-                            </div>
-                            <!--Testimonial One Single-->
-                            <div class="testimonial-one__single">
-                                <div class="testimonial-one__content">
-                                    <p class="testimonial-one__text">I was very impresed by the mibooz service and their
-                                        work of quality lorem ipsum is simply free text used by copy typing refreshing.
-                                        Neque porro est qui ipsum.</p>
-                                </div>
-                                <div class="testimonial-one__client-info">
-                                    <div class="testimonial-one__client__img">
-                                        <img src="assets/images/testimonial/testimonial-one-img-2.jpg" alt="">
-                                    </div>
-                                    <h4 class="testimonial-one__name">kevin martin</h4>
-                                    <p class="testimonial-one__title">Customer</p>
-                                </div>
-                            </div>
-                            <!--Testimonial One Single-->
-                            <div class="testimonial-one__single">
-                                <div class="testimonial-one__content">
-                                    <p class="testimonial-one__text">I was very impresed by the mibooz service and their
-                                        work of quality lorem ipsum is simply free text used by copy typing refreshing.
-                                        Neque porro est qui ipsum.</p>
-                                </div>
-                                <div class="testimonial-one__client-info">
-                                    <div class="testimonial-one__client__img">
-                                        <img src="assets/images/testimonial/testimonial-one-img-3.jpg" alt="">
-                                    </div>
-                                    <h4 class="testimonial-one__name">sarah rose</h4>
-                                    <p class="testimonial-one__title">Customer</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--Testimonial One End-->
-
+        
         <!--CTA One Start-->
         <section class="cta-one">
             <div class="container">
