--- a/services.html
+++ b/services.html
@@ -41,8 +41,8 @@
     <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/mibooz.css" />
-    <link rel="stylesheet" href="assets/css/mibooz-responsive.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main-responsive.css" />
 </head>
 
 <body>
@@ -55,7 +55,9 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu-wrapper">
                     <div class="main-menu-wrapper__logo">
-                        <a href="index.html"><img src="assets/images/resources/logo-1.png" alt="" width="79" height="79"></a>
+                        <a href="index.html">
+                            <img src="assets/images/resources/logo-1.png" alt="" width="79" height="79">
+                        </a>
                     </div>
                     <div class="main-menu-wrapper__main-menu">
                         <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
@@ -63,55 +65,34 @@
                             <li class="dropdown">
                                 <a href="index.html">Home</a>
                                 <ul>
-                                    <li>
-                                        <a href="index.html">Home One</a>
-                                    </li>
-                                    <li><a href="index2.html">Home Two</a></li>
-                                    <li><a href="index3.html">Home Three</a></li>
                                     <li class="dropdown">
                                         <a href="#">Header Styles</a>
-                                        <ul>
-                                            <li><a href="index.html">Header One</a></li>
-                                            <li><a href="index2.html">Header Two</a></li>
-                                            <li><a href="index3.html">Header Two</a></li>
-                                        </ul>
                                     </li>
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#">Pages</a>
+                                <a href="./about.html">About</a>
                                 <ul>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="team.html">Team</a></li>
-                                    <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
+                                    <li>
+                                        <a href="team.html">Team</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="dropdown  ">
                                 <a href="#">Services</a>
                                 <ul>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="mobile-application.html">Mobile Application</a></li>
-                                    <li><a href="digital-marketing.html">Digital Marketing</a></li>
-                                    <li><a href="graphic-designing.html">Graphic Designing</a></li>
-                                    <li><a href="website-development.html">Website Development</a></li>
-                                    <li><a href="social-marketing.html">Social Marketing</a></li>
-                                    <li><a href="content-writing.html">Content Writting</a></li>
+                                    <li>
+                                        <a href="services.html">Services</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#">Projects</a>
+                                <a href="./blog.html">Blog</a>
                                 <ul>
-                                    <li><a href="project.html">Projects</a></li>
-                                    <li><a href="project-details.html">Project Details</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">Blog</a>
-                                <ul>
-                                    <li><a href="blog.html">Blog Posts</a></li>
-                                    <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
+                                    <li>
+                                        <a href="blog.html">Blog Posts</a>
+                                    </li>
+                        
                                 </ul>
                             </li>
                             <li><a href="contact.html">Contact</a></li>
@@ -528,7 +509,7 @@
                                     <h4 class="footer-widget__contact-email-phone">
                                         <a href="mailto:needhelp@company.com"
                                             class="footer-widget__contact-email">lochinbeksetor@gmail.com</a>
-                                        <a href="tel:926668880000" class="footer-widget__contact-phone">+ +998 99 063 11 99</a>
+                                        <a href="tel:926668880000" class="footer-widget__contact-phone"> +998 99 063 11 99</a>
                                     </h4>
                                 </div>
                             </div>
